@@ -1,40 +1,27 @@
 package fr.insee.survey.datacollectionmanagement.metadata.controller;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
-
 import fr.insee.survey.datacollectionmanagement.constants.Constants;
+import fr.insee.survey.datacollectionmanagement.exception.NotFoundException;
+import fr.insee.survey.datacollectionmanagement.exception.NotMatchException;
 import fr.insee.survey.datacollectionmanagement.metadata.domain.Support;
 import fr.insee.survey.datacollectionmanagement.metadata.dto.SupportDto;
 import fr.insee.survey.datacollectionmanagement.metadata.service.SupportService;
 import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.*;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
+
+import java.util.List;
 
 @RestController
 @CrossOrigin
@@ -43,72 +30,55 @@ import lombok.extern.slf4j.Slf4j;
         + "|| @AuthorizeMethodDecider.isWebClient() "
         + "|| @AuthorizeMethodDecider.isAdmin() ")
 @Tag(name = "3 - Metadata", description = "Enpoints to create, update, delete and find entities in metadata domain")
+@RequiredArgsConstructor
+@Validated
 public class SupportController {
 
-    @Autowired
-    private ModelMapper modelmapper;
+    private final ModelMapper modelmapper;
 
-    @Autowired
-    private SupportService supportService;
+    private final SupportService supportService;
 
     @Operation(summary = "Search for supports, paginated")
     @GetMapping(value = Constants.API_SUPPORTS, produces = "application/json")
-    @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = SupportPage.class)))
-    })
-    public ResponseEntity<?> getSupports(
+    public ResponseEntity<SupportPage> getSupports(
             @RequestParam(defaultValue = "0") Integer page,
             @RequestParam(defaultValue = "20") Integer size,
             @RequestParam(defaultValue = "id") String sort) {
         Pageable pageable = PageRequest.of(page, size, Sort.by(sort));
         Page<Support> pageSupport = supportService.findAll(pageable);
-        List<SupportDto> listSupports = pageSupport.stream().map(c -> convertToDto(c)).collect(Collectors.toList());
+        List<SupportDto> listSupports = pageSupport.stream().map(this::convertToDto).toList();
         return ResponseEntity.ok().body(new SupportPage(listSupports, pageable, pageSupport.getTotalElements()));
     }
 
     @Operation(summary = "Search for a support by its id")
     @GetMapping(value = Constants.API_SUPPORTS_ID, produces = "application/json")
-    @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = SupportDto.class))),
-            @ApiResponse(responseCode = "404", description = "Not found"),
-            @ApiResponse(responseCode = "400", description = "Bad request")
-    })
-    public ResponseEntity<?> getSupport(@PathVariable("id") String id) {
-        Optional<Support> support = supportService.findById(id);
-        if (!support.isPresent()) {
-            log.warn("Support {} does not exist", id);
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("support does not exist");
-        }
-        support = supportService.findById(id);
-        return ResponseEntity.ok().body(convertToDto(support.orElse(null)));
+    public ResponseEntity<SupportDto> getSupport(@PathVariable("id") String id) {
+        Support support = supportService.findById(id);
+        return ResponseEntity.ok().body(convertToDto(support));
 
     }
 
     @Operation(summary = "Update or create a support")
     @PutMapping(value = Constants.API_SUPPORTS_ID, produces = "application/json", consumes = "application/json")
-    @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = SupportDto.class))),
-            @ApiResponse(responseCode = "201", description = "Created", content = @Content(schema = @Schema(implementation = SupportDto.class))),
-            @ApiResponse(responseCode = "400", description = "Bad request")
-    })
-    public ResponseEntity<?> putSupport(@PathVariable("id") String id, @RequestBody SupportDto supportDto) {
+    public ResponseEntity<SupportDto> putSupport(@PathVariable("id") String id, @RequestBody @Valid SupportDto supportDto) {
         if (!supportDto.getId().equals(id)) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("id and support id don't match");
+            throw new NotMatchException("id and support id don't match");
         }
 
         HttpHeaders responseHeaders = new HttpHeaders();
         responseHeaders.set(HttpHeaders.LOCATION,
                 ServletUriComponentsBuilder.fromCurrentRequest().buildAndExpand(supportDto.getId()).toUriString());
         HttpStatus httpStatus;
+        try {
+            supportService.findById(id);
+            log.info("Update support with the id {}", supportDto.getId());
+            httpStatus = HttpStatus.OK;
 
-        log.warn("Update support with the id {}", supportDto.getId());
-        Optional<Support> supportBase = supportService.findById(id);
-        httpStatus = HttpStatus.OK;
-
-        if (!supportBase.isPresent()) {
+        } catch (NotFoundException e) {
             log.info("Create support with the id {}", supportDto.getId());
             httpStatus = HttpStatus.CREATED;
         }
+
 
         Support support = supportService.insertOrUpdateSupport(convertToEntity(supportDto));
         return ResponseEntity.status(httpStatus).headers(responseHeaders).body(convertToDto(support));
