@@ -1,35 +1,8 @@
 package fr.insee.survey.datacollectionmanagement.questioning.controller;
 
-import java.text.ParseException;
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import org.apache.commons.lang3.StringUtils;
-import org.modelmapper.ModelMapper;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
-
 import fr.insee.survey.datacollectionmanagement.constants.Constants;
+import fr.insee.survey.datacollectionmanagement.exception.NotFoundException;
+import fr.insee.survey.datacollectionmanagement.exception.NotMatchException;
 import fr.insee.survey.datacollectionmanagement.questioning.domain.SurveyUnit;
 import fr.insee.survey.datacollectionmanagement.questioning.dto.SurveyUnitDto;
 import fr.insee.survey.datacollectionmanagement.questioning.service.SurveyUnitService;
@@ -39,7 +12,21 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
+import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.*;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
+
+import java.util.List;
 
 @RestController
 @PreAuthorize("@AuthorizeMethodDecider.isInternalUser() "
@@ -47,20 +34,17 @@ import lombok.extern.slf4j.Slf4j;
         + "|| @AuthorizeMethodDecider.isAdmin() ")
 @Tag(name = "2 - Questioning", description = "Enpoints to create, update, delete and find entities around the questionings")
 @Slf4j
+@RequiredArgsConstructor
+@Validated
 public class SurveyUnitController {
 
-    static final Logger LOGGER = LoggerFactory.getLogger(SurveyUnitController.class);
-
-    @Autowired
-    private SurveyUnitService surveyUnitService;
-
-    @Autowired
-    private ModelMapper modelMapper;
+    private final SurveyUnitService surveyUnitService;
+    private final ModelMapper modelMapper;
 
     @Operation(summary = "Search for a survey units, paginated")
     @GetMapping(value = Constants.API_SURVEY_UNITS, produces = "application/json")
     @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = SurveyUnitDto.class))),
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = SurveyUnitPage.class))),
             @ApiResponse(responseCode = "404", description = "Not found"),
             @ApiResponse(responseCode = "400", description = "Bad Request")
     })
@@ -70,7 +54,27 @@ public class SurveyUnitController {
             @RequestParam(defaultValue = "idSu") String sort) {
         Pageable pageable = PageRequest.of(page, size, Sort.by(sort));
         Page<SurveyUnit> pageC = surveyUnitService.findAll(pageable);
-        List<SurveyUnitDto> listSuDto = pageC.stream().map(c -> convertToDto(c)).collect(Collectors.toList());
+        List<SurveyUnitDto> listSuDto = pageC.stream().map(this::convertToDto).toList();
+        return new SurveyUnitPage(listSuDto, pageable, pageC.getTotalElements());
+    }
+
+    @Operation(summary = "Multi-criteria search survey-unit")
+    @GetMapping(value = Constants.API_SURVEY_UNITS_SEARCH, produces = "application/json")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = SurveyUnitPage.class))),
+            @ApiResponse(responseCode = "404", description = "Not found"),
+            @ApiResponse(responseCode = "400", description = "Bad Request")
+    })
+    public Page<SurveyUnitDto> searchSurveyUnits(
+            @RequestParam(required = false) String idSu,
+            @RequestParam(required = false) String identificationCode,
+            @RequestParam(required = false) String identificationName,
+            @RequestParam(defaultValue = "0") Integer page,
+            @RequestParam(defaultValue = "20") Integer size,
+            @RequestParam(defaultValue = "id_su") String sort) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by(sort));
+        Page<SurveyUnit> pageC = surveyUnitService.findByParameters(idSu, identificationCode, identificationName, pageable);
+        List<SurveyUnitDto> listSuDto = pageC.stream().map(this::convertToDto).toList();
         return new SurveyUnitPage(listSuDto, pageable, pageC.getTotalElements());
     }
 
@@ -81,17 +85,9 @@ public class SurveyUnitController {
             @ApiResponse(responseCode = "404", description = "Not found"),
             @ApiResponse(responseCode = "400", description = "Bad Request")
     })
-    public ResponseEntity<?> findSurveyUnit(@PathVariable("id") String id) {
-
-        try {
-            Optional<SurveyUnit> surveyUnit = surveyUnitService.findbyId(StringUtils.upperCase(id));
-            if (surveyUnit.isPresent())
-                return ResponseEntity.status(HttpStatus.OK).body(convertToDto(surveyUnit.get()));
-            else
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body("survey unit not found");
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Error");
-        }
+    public ResponseEntity<SurveyUnitDto> findSurveyUnit(@PathVariable("id") String id) {
+        SurveyUnit surveyUnit = surveyUnitService.findbyId(StringUtils.upperCase(id));
+        return ResponseEntity.status(HttpStatus.OK).body(convertToDto(surveyUnit));
 
     }
 
@@ -102,10 +98,9 @@ public class SurveyUnitController {
             @ApiResponse(responseCode = "201", description = "Created", content = @Content(schema = @Schema(implementation = SurveyUnitDto.class))),
             @ApiResponse(responseCode = "400", description = "Bad request")
     })
-    public ResponseEntity<?> putSurveyUnit(@PathVariable("id") String id, @RequestBody SurveyUnitDto surveyUnitDto) {
-        if (StringUtils.isBlank(surveyUnitDto.getIdSu()) || !surveyUnitDto.getIdSu().equalsIgnoreCase(id)) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("id and idSu don't match");
-
+    public ResponseEntity<SurveyUnitDto> putSurveyUnit(@PathVariable("id") String id, @RequestBody @Valid SurveyUnitDto surveyUnitDto) {
+        if (!surveyUnitDto.getIdSu().equalsIgnoreCase(id)) {
+            throw new NotMatchException("id and idSu don't match");
         }
 
         SurveyUnit surveyUnit;
@@ -114,18 +109,17 @@ public class SurveyUnitController {
         responseHeaders.set(HttpHeaders.LOCATION,
                 ServletUriComponentsBuilder.fromCurrentRequest().buildAndExpand(surveyUnitDto.getIdSu()).toUriString());
 
-        try {
-            surveyUnit = convertToEntity(surveyUnitDto);
-        } catch (ParseException e) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Impossible to parse survey unit");
-        }
+        surveyUnit = convertToEntity(surveyUnitDto);
 
-        if (surveyUnitService.findbyId(surveyUnitDto.getIdSu()).isPresent())
+        try {
+            surveyUnitService.findbyId(surveyUnitDto.getIdSu());
             responseStatus = HttpStatus.OK;
-        else {
-            LOGGER.info("Creating survey with the id {}", surveyUnitDto.getIdSu());
+
+        } catch (NotFoundException e) {
+            log.info("Creating survey with the id {}", surveyUnitDto.getIdSu());
             responseStatus = HttpStatus.CREATED;
         }
+
         return ResponseEntity.status(responseStatus)
                 .body(convertToDto(surveyUnitService.saveSurveyUnitAndAddress(surveyUnit)));
 
@@ -138,19 +132,18 @@ public class SurveyUnitController {
             @ApiResponse(responseCode = "404", description = "Not found"),
             @ApiResponse(responseCode = "400", description = "Bad request")
     })
-    public ResponseEntity<?> deleteSurveyUnit(@PathVariable("id") String id) {
+    public ResponseEntity<String> deleteSurveyUnit(@PathVariable("id") String id) {
+        SurveyUnit surveyUnit = surveyUnitService.findbyId(StringUtils.upperCase(id));
+
         try {
-            Optional<SurveyUnit> surveyUnit = surveyUnitService.findbyId(StringUtils.upperCase(id));
-            if (surveyUnit.isPresent()) {
-                if (!surveyUnit.get().getQuestionings().isEmpty()) {
-                    log.warn("Some questionings exist for the survey unit {}, the survey unit can't be deleted", id);
-                    return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                            .body("Some questionings exist for this survey unit, the survey unit can't be deleted");
-                }
-                surveyUnitService.deleteSurveyUnit(id);
-                return ResponseEntity.status(HttpStatus.NO_CONTENT).body("Survey unit deleted");
-            } else
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body("survey unit not found");
+            if (!surveyUnit.getQuestionings().isEmpty()) {
+                log.warn("Some questionings exist for the survey unit {}, the survey unit can't be deleted", id);
+                return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                        .body("Some questionings exist for this survey unit, the survey unit can't be deleted");
+            }
+            surveyUnitService.deleteSurveyUnit(id);
+            return ResponseEntity.status(HttpStatus.NO_CONTENT).body("Survey unit deleted");
+
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Error");
         }
@@ -160,7 +153,7 @@ public class SurveyUnitController {
         return modelMapper.map(surveyUnit, SurveyUnitDto.class);
     }
 
-    private SurveyUnit convertToEntity(SurveyUnitDto surveyUnitDto) throws ParseException {
+    private SurveyUnit convertToEntity(SurveyUnitDto surveyUnitDto) {
         return modelMapper.map(surveyUnitDto, SurveyUnit.class);
     }
 
