@@ -2,7 +2,6 @@ package fr.insee.survey.datacollectionmanagement.user.controller;
 
 
 import fr.insee.survey.datacollectionmanagement.constants.Constants;
-import fr.insee.survey.datacollectionmanagement.exception.EventException;
 import fr.insee.survey.datacollectionmanagement.user.domain.User;
 import fr.insee.survey.datacollectionmanagement.user.domain.UserEvent;
 import fr.insee.survey.datacollectionmanagement.user.dto.UserEventDto;
@@ -15,37 +14,36 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
-import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
-@RestController(value="UserEvents")
+@RestController(value = "UserEvents")
 @PreAuthorize("@AuthorizeMethodDecider.isInternalUser() "
         + "|| @AuthorizeMethodDecider.isWebClient() "
         + "|| @AuthorizeMethodDecider.isAdmin() ")
 @Slf4j
 @Tag(name = "7-User", description = "Enpoints to create, update, delete and find users, their events and accreditations")
+@RequiredArgsConstructor
+@Validated
 public class UserEventController {
 
-    @Autowired
-    private ModelMapper modelMapper;
+    private final ModelMapper modelMapper;
 
-    @Autowired
-    UserService userService;
+    private final UserService userService;
 
-    @Autowired
-    UserEventService userEventService;
+    private final UserEventService userEventService;
 
     @Operation(summary = "Search for userEvents by user's id")
     @GetMapping(value = Constants.API_USERS_ID_USEREVENTS, produces = "application/json")
@@ -54,17 +52,13 @@ public class UserEventController {
             @ApiResponse(responseCode = "404", description = "Not found"),
             @ApiResponse(responseCode = "400", description = "Internal servor error")
     })
-    public ResponseEntity<?> getUserUserEvents(@PathVariable("id") String identifier) {
+    public ResponseEntity getUserUserEvents(@PathVariable("id") String identifier) {
+        User user = userService.findByIdentifier(identifier);
+
         try {
-
-            Optional<User> optUser = userService.findByIdentifier(identifier);
-            if (optUser.isPresent()) {
-                return ResponseEntity.status(HttpStatus.OK)
-                        .body(optUser.get().getUserEvents().stream().map(ce -> convertToDto(ce))
-                                .collect(Collectors.toList()));
-
-            } else
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body("User does not exist");
+            return ResponseEntity.status(HttpStatus.OK)
+                    .body(user.getUserEvents().stream().map(this::convertToDto)
+                            .toList());
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Error");
         }
@@ -78,30 +72,21 @@ public class UserEventController {
             @ApiResponse(responseCode = "400", description = "Bad request"),
             @ApiResponse(responseCode = "404", description = "Not found")
     })
-    public ResponseEntity<?> postUserEvent(@RequestBody UserEventDto userEventDto) {
-        try {
+    public ResponseEntity postUserEvent(@Valid @RequestBody UserEventDto userEventDto) {
 
-            Optional<User> optUser = userService.findByIdentifier(userEventDto.getIdentifier());
-            if (optUser.isPresent()) {
-                User user = optUser.get();
-                UserEvent userEvent = convertToEntity(userEventDto);
-                UserEvent newUserEvent = userEventService.saveUserEvent(userEvent);
-                Set<UserEvent> setUserEvents = user.getUserEvents();
-                setUserEvents.add(newUserEvent);
-                user.setUserEvents(setUserEvents);
-                userService.saveUser(user);
-                HttpHeaders responseHeaders = new HttpHeaders();
-                responseHeaders.set(HttpHeaders.LOCATION,
-                        ServletUriComponentsBuilder.fromCurrentRequest().toUriString());
-                return ResponseEntity.status(HttpStatus.CREATED).headers(responseHeaders)
-                        .body(convertToDto(newUserEvent));
-            } else
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body("User does not exist");
-        } catch (EventException e) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body("Event not recognized: only [" + Stream.of(UserEvent.UserEventType.values())
-                            .map(UserEvent.UserEventType::name).collect(Collectors.joining(", ")) + "] are possible");
-        }
+        User user = userService.findByIdentifier(userEventDto.getIdentifier());
+        UserEvent userEvent = convertToEntity(userEventDto);
+        UserEvent newUserEvent = userEventService.saveUserEvent(userEvent);
+        Set<UserEvent> setUserEvents = user.getUserEvents();
+        setUserEvents.add(newUserEvent);
+        user.setUserEvents(setUserEvents);
+        userService.saveUser(user);
+        HttpHeaders responseHeaders = new HttpHeaders();
+        responseHeaders.set(HttpHeaders.LOCATION,
+                ServletUriComponentsBuilder.fromCurrentRequest().toUriString());
+        return ResponseEntity.status(HttpStatus.CREATED).headers(responseHeaders)
+                .body(convertToDto(newUserEvent));
+
 
     }
 
@@ -112,19 +97,17 @@ public class UserEventController {
             @ApiResponse(responseCode = "404", description = "Not found"),
             @ApiResponse(responseCode = "400", description = "Bad Request")
     })
-    public ResponseEntity<?> deleteUserEvent(@PathVariable("id") Long id) {
+    public ResponseEntity deleteUserEvent(@PathVariable("id") Long id) {
+        UserEvent userEvent = userEventService.findById(id);
+
         try {
-            Optional<UserEvent> optUserEvent = userEventService.findById(id);
-            if (optUserEvent.isPresent()) {
-                UserEvent userEvent = optUserEvent.get();
-                User user = userEvent.getUser();
-                user.setUserEvents(user.getUserEvents().stream().filter(ue -> !ue.equals(userEvent))
-                        .collect(Collectors.toSet()));
-                userService.saveUser(user);
-                userEventService.deleteUserEvent(id);
-                return ResponseEntity.status(HttpStatus.NO_CONTENT).body("User event deleted");
-            } else
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body("User event does not exist");
+            User user = userEvent.getUser();
+            user.setUserEvents(user.getUserEvents().stream().filter(ue -> !ue.equals(userEvent))
+                    .collect(Collectors.toSet()));
+            userService.saveUser(user);
+            userEventService.deleteUserEvent(id);
+            return ResponseEntity.status(HttpStatus.NO_CONTENT).body("User event deleted");
+
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Error");
 
@@ -137,10 +120,7 @@ public class UserEventController {
         return ueDto;
     }
 
-    private UserEvent convertToEntity(UserEventDto userEventDto) throws EventException {
-        UserEvent userEvent = modelMapper.map(userEventDto, UserEvent.class);
-        if (userEvent.getType() == null)
-            throw new EventException("User event not recognized");
-        return userEvent;
+    private UserEvent convertToEntity(UserEventDto userEventDto) {
+        return modelMapper.map(userEventDto, UserEvent.class);
     }
 }
